--- a/data-engineer.html
+++ b/data-engineer.html
@@ -69,16 +69,20 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698466689-data-engineer-with-etl-python-aws-sql'>Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o0Spbfwc&__jvst=Employee+Referral&__jvsd=sWVkwhwt&__jvsc=Twitter&bid=nRkjoMw9'>Palo Alto Networks Careers - Senior Big Data Engineer (Cortex XDR)</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698466689-data-engineer-with-etl-python-aws-sql'>Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Bey/743999698466753-data-engineer-with-crm-etl-design-sql-python'>Bey Data Engineer with CRM, ETL design, SQL, Python | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Mateo, CA San Mateo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=orTVafw9&__jvst=Tenable+Employee&__jvsd=sXmXfhwh&__jvsc=Twitter&bid=nLhioMwZ'>Tenable Careers - Principal Data Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 <h5><a href='https://careers.jobscore.com/careers/1904labs/jobs/modern-data-engineer-cYDOAY-Ser6yzHaKiznY58'>Modern Data Engineer #0160 job at 1904labs in Saint Louis, MO, powered by JobScore</a></h5> 
@@ -97,7 +101,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/recurly/aea9740e-c288-4e1b-88d6-bd1becdb781e'>Recurly - Senior Data Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/recurly/aea9740e-c288-4e1b-88d6-bd1becdb781e'>Recurly - Senior Data Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -113,7 +117,7 @@
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o0Spbfwc&__jvst=Employee+Referral&__jvsd=sdujEgwp&__jvsc=Twitter&bid=nkN8nMwT'>Palo Alto Networks Careers - Senior Big Data Engineer (Cortex XDR)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o0Spbfwc&__jvst=Employee+Referral&__jvsd=sdujEgwp&__jvsc=Twitter&bid=nkN8nMwT'>Palo Alto Networks Careers - Senior Big Data Engineer (Cortex XDR)</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -121,11 +125,11 @@
 <p><span class="badge badge-light">San Jose, California  Santa Clara, California  San Francisco, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/properly/jobs/4500375002'>Job Application for Data Engineer at Properly</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/properly/jobs/4500375002'>Job Application for Data Engineer at Properly</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/9tdo7ggrr5teama7tid1eqekxw'>Data Engineer | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/9tdo7ggrr5teama7tid1eqekxw'>Data Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY  ?  New York</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -146,7 +150,7 @@
 <p>Oct 16, 2019 ... About TrantorFounded in 2009, Trantor is a leading software services company 
 headquartered in Menlo Park, California. We deliver innovative technology?...</p>
 <hr/>
-<h5><a href='https://apply.workable.com/frichti/j/B17E5A6B43/'>BI / Data Engineer (H/F) - Frichti</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/frichti/j/B17E5A6B43/'>BI / Data Engineer (H/F) - Frichti</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>14 oct. 2019 ... En tant que BI / Data Engineer, vous rejoignez l'?quipe Data compos?e de data 
 analysts et data scientists. Sous la supervision du Head of Data, votre r?le est?...</p>
@@ -172,7 +176,7 @@ business?...</p>
 <p>4 days ago ... Responsibilities for Data Engineer. Create and maintain optimal data pipeline 
 architecture,; Identify, design, and implement internal process improvements:?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qb59Vfw4&k=Job&j=oEcibfw3&__jvst=Employee+Referral&__jvsd=suXs5iwL&__jvsc=Twitter&bid=nnBcnMwO'>Infoblox Careers - Senior Data Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qb59Vfw4&k=Job&j=oEcibfw3&__jvst=Employee+Referral&__jvsd=suXs5iwL&__jvsc=Twitter&bid=nnBcnMwO'>Infoblox Careers - Senior Data Engineer</a></h5> 
 <p><span class="badge badge-light">Burnaby</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -218,7 +222,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/pWD0yTZrZi/Big-Data-Engineer'>Big Data Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/pWD0yTZrZi/Big-Data-Engineer'>Big Data Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -234,7 +238,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/altisource/jobs/1925338'>Job Application for 1713323 - Big Data Engineer at Altisource</a></h5> 
+<h5><a href='https://boards.greenhouse.io/altisource/jobs/1925338'>Job Application for 1713323 - Big Data Engineer at Altisource</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -328,7 +332,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698254432-data-engineering-consultant'>Devoteam Data Engineering Consultant | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698254432-data-engineering-consultant'>Devoteam Data Engineering Consultant | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Stockholm, Sweden  Stockholm</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -360,7 +364,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... Apply to Software Data Engineering Manager at Welltok in Boston, MA.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ngdata.com/3935edb9-2498-4a3c-9c9f-74dd9add7fb0'>NGData - Big Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ngdata.com/3935edb9-2498-4a3c-9c9f-74dd9add7fb0'>NGData - Big Data Engineer</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -401,7 +405,7 @@ Engineering. Upload a file. Use Dropbox?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=olpI9fwl&__jvst=Employee&__jvsd=sPcd2gw1&__jvsc=Twitter&bid=nN6jlMwO'>Schneider Electric NAM Careers - NAM Enterprise IT Data Services - Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=olpI9fwl&__jvst=Employee&__jvsd=sPcd2gw1&__jvsc=Twitter&bid=nN6jlMwO'>Schneider Electric NAM Careers - NAM Enterprise IT Data Services - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -438,7 +442,7 @@ uma empresa de tecnologia movida por pessoas apaixonadas e cheias de?...</p>
 <p><span class="badge badge-light">Gothenburg</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/FRB08D2Yt'>Data Engineer I - The Federal Reserve System Careers</a></h5> 
+<h5><a href='https://frb.referrals.selectminds.com/FRB08D2Yt'>Data Engineer I - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light">Missouri, St. Louis</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -466,7 +470,7 @@ Individuals seeking employment at Hinge are considered without regards to race,
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SmarterAgent/743999697837444-market-leading-saas-real-estate-platform-senior-level-data-engineer-90k-160k'>Smarter Agent Market Leading SAAS Real Estate Platform ? Senior Level Data Engineer - $90K - $160K | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SmarterAgent/743999697837444-market-leading-saas-real-estate-platform-senior-level-data-engineer-90k-160k'>Smarter Agent Market Leading SAAS Real Estate Platform ? Senior Level Data Engineer - $90K - $160K | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -483,10 +487,6 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <hr/>
 <h5><a href='https://jobs.lever.co/clarity/900bc25b-bf37-4811-b6c2-bb5239a71f0c'>Clarity Insights - Data Engineer - Senior Consultant (Talend) - National</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-25</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/heycar/jobs/4494892002'>Job Application for Business Intelligence Senior Data Engineer (m/f/d) at heycar</a></h5> 
-<p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
 
